[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[node name="UI" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_jump" type="Label" parent="."]
margin_right = 41.0
margin_bottom = 14.0
text = "JUMP: "
valign = 1

[node name="label_left" type="Label" parent="."]
margin_left = 45.0
margin_right = 81.0
margin_bottom = 14.0
text = "LEFT: "

[node name="label_right" type="Label" parent="."]
margin_left = 85.0
margin_right = 133.0
margin_bottom = 14.0
text = "RIGHT: "
